# agent

TSA-Suite/: pyproject.toml
TSA-Suite/.claude/skills/bo-for-experiment/: SKILL.md  main.py
TSA-Suite/.claude/skills/hebo-forecasting-hpo/: SKILL.md  main.py  run_hpo_loop.py
TSA-Suite/.claude/skills/industrial-forecasting-skill/: SKILL.md  generate_synthetic_data.py  run_all_pipelines.py  run_forecast_pipeline.py  (+1 more)
TSA-Suite/data/synthetic/: forecast_demo.csv  synthetic_meta.json
TSA-Suite/docs/: KNOWN_ISSUES.md  TIMELINE.md
TSA-Suite/hpo_results/: HPO_FORECAST_20260627_001_best_params.json  HPO_FORECAST_20260627_001_history.json  HPO_FORECAST_20260627_002_best_params.json  HPO_FORECAST_20260627_002_history.json  HPO_FORECAST_20260627_003_best_params.json  HPO_FORECAST_20260627_003_history.json  HPO_FORECAST_20260627_105349_history.json  HPO_FORECAST_20260627_110413_best_params.json  HPO_FORECAST_20260627_110413_history.json
TSA-Suite/results/forecasts/: pred.csv
TSA-Suite/results/metrics/: forecast_metrics.json
TSA-Suite/scripts/: smooth_feature_demo.py
TSA-Suite/src/tsas/: __init__.py
TSA-Suite/tests/test_cli/: test_common.py  test_config_loader.py  test_detection.py  test_evaluation.py  test_feature_construction.py  test_forecasting.py  test_help_generator.py  test_io.py  test_main.py  test_registry.py  test_selection.py  test_type_inference.py
TSA-Suite/tests/test_engine_hpo/: test_result.py  test_search_hint.py  test_space_parser.py  test_trainer.py
TSA-Suite/tests/test_engine_operator/: test_base.py  test_output_type.py  test_version.py
(+142 files in other folders)
